--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT=4000
-MONGO_URI=mongodb+srv://josesegundouidev:99ypg75pAUYRR9LM@mernapp.w9b9b0n.mongodb.net/?retryWrites=true&w=majority
-SECRET=ninjadojoshifuyoshimarioluigipeachbowser
+MONG_URL=mongodb+srv://josesegundouidev:99ypg75pAUYRR9LM@mernapp.w9b9b0n.mongodb.net/?retryWrites=true&w=majority
